# physnum

./: CMakeLists.txt
Exercice 4/: Analyse_Apollo_student.m  Analyse_rho_Comerre_Vion.asv  Analyse_rho_descendre_Comerre_Vion.asv  Analyse_rho_descendre_Comerre_Vion.m  Analyse_rho_monter_Comerre_Vion.asv  Analyse_rho_monter_Comerre_Vion.m  CMakeLists.txt  Exercice4_Comerre_Vion  Exercice4_Comerre_Vion.cpp  Exercice4_Comerre_Vion_rho.cpp  Makefile  Parameter_scan.m  configuration.in.example  nsteps=100.out  nsteps=1000.out  nsteps=10000.out  nsteps=1600.out  nsteps=16000.out  nsteps=160000.out  nsteps=200.out  nsteps=2000.out  nsteps=20000.out  nsteps=201462.069.out  nsteps=3200.out  nsteps=32000.out  nsteps=320000.out  nsteps=400.out  nsteps=4000.out  nsteps=40000.out  nsteps=800.out  nsteps=8000.out  nsteps=80000.out
Exercice 4/images.eps/: exercice1_a_comparaison.eps  exercice1_a_erreur.eps  exercice1_b_convergence.eps
Exercice 4/images.fig/: exercice1_a_comparaison.fig  exercice1_a_erreur.fig  exercice1_b_convergence.fig
physnumarchive/exercice3/: Makefile  ParameterScan_Vion_Comerre.m  RapportExercice3_Vion_Comerre.cpp  configuration.in.example  exercice_a1theta_nsteps=10000.eps  exercice_a1thetadot.eps  exercice_a2.eps  exercice_c1theta.eps  exercice_c1thetadot.eps  exercice_c2theta.eps  exercice_c2thetadot.eps  exercice_d1.eps  exercice_d1.fig  exercice_d2.eps  exercice_d2.fig  exercice_d2anglechaotique.eps  exercice_d2anglenonchaotique.eps  exercice_d2convergence_chaotique.eps  exercice_d2convergence_nonchaotique.eps  exercice_d2nonchaotique.eps  exercice_d2nonchaotique.fig  exercice_e1.eps  exercice_e2.eps  exercice_e2.fig  exercice_e2_angle.eps  exercice_e2_angle.fig  output_example.out  somme.cpp
physnumarchive/zExercice1_student/: Analyse_Ex1_students.py  Analyse_Exercice1_Cas260secondes_Vion_Comerre.m  ConfigFile.h  Emec_Pnc.fig  Makefile  matlab.mat  (+9 more)
(+18 files in other folders)
